--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">MVVMNewsApp</string>
+    <string name="app_name">UMKMEdu</string>
+    <string name="slogan1">Educate Yourself</string>
+    <string name="slogan2">Build Your Own Business</string>
+    <string name="copy_right">Version 1.0 | Copyrights © 2022</string>
+    <string name="email">example@gmail.com</string>
+    <string name="deskripsi">UMKMedu merupakan aplikasi berbasis android yang menyediakan informasi berupa artikel-artikel seputar bisnis yang sedang dijalankan oleh UMKM. Aplikasi ini dimaksudkan untuk menyediakan konten-konten informatif terkait dengan UMKM sehingga diharapkan dapat membantu memberikan insight-insight baru terkait UMKM khususnya bagi yang berkeinginan untuk membangun UMKM sendiri.</string>
 </resources>
